CTA button checkup

--- a/docs/cta-button.mdx
+++ b/docs/cta-button.mdx
@@ -18,7 +18,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 ### How it looks
 
 <iframe
-  src="https://dev.designsystem.posticloud.fi/iframe.html?id=basic-components-buttons--call-to-action-button&viewMode=story"
+  src="https://storybook-design-system.netlify.app/iframe.html?id=button--basic&viewMode=story"
   style="width:100%;"
 ></iframe>
 
